# simplified-clap

./: .gitignore  Cargo.toml
clap_bench/: Cargo.toml
clap_bench/benches/: complex.rs  empty.rs  end_to_end.rs  ripgrep.rs
clap_bench/src/: complex.rs  lib.rs  main.rs  ripgrep.rs  rustup.rs  simple.rs
clap_builder/src/: derive.rs  macros.rs
clap_builder/src/builder/: arg.rs  command.rs  debug_asserts.rs  range.rs  styled_str.rs  value_parser.rs
clap_builder/src/error/: format.rs  mod.rs
clap_builder/src/output/: help_template.rs
clap_builder/src/parser/: parser.rs  validator.rs
clap_builder/src/parser/features/: suggestions.rs
clap_builder/src/parser/matches/: arg_matches.rs
clap_builder/src/util/: any_value.rs  flat_map.rs
clap_complete/src/aot/shells/: zsh.rs
clap_derive/src/: item.rs  lib.rs
clap_derive/src/derives/: parser.rs  subcommand.rs
clap_lex/src/: lib.rs
clap_lex/tests/testsuite/: lexer.rs  parsed.rs  shorts.rs
clap_mangen/src/: render.rs
tests/builder/: app_settings.rs  env.rs  global_args.rs  help_env.rs
