[package]
name = "clap_bench"
version = "0.0.0"
description = "Benchmarks for clap"
publish = false
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.release]
release = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
clap = { path = "../", version = "4.0.0", default-features = false, features = [
    "std",
    "help",
] }
lazy_static = "1.4.0"

[[bench]]
harness = false
name = "end_to_end"


[lints]
workspace = true
